Change to reprise.table.bootstrap.css changing 'table-layout: fixed;' to 'table-layout: auto;'. This allows the addition of extra columns without overly squishing the table. Version bump
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ReportingTools@82989 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/extdata/csslib/reprise.table.bootstrap.css
+++ b/inst/extdata/csslib/reprise.table.bootstrap.css
@@ -27,7 +27,7 @@ h1{ }
 
 .table {
 	clear: both;
-        table-layout: fixed;
+        table-layout: auto;
         margin-bottom: 6px !important;
         font-size: 10pt;
         border-bottom: 1px solid #F5F5F5;
